--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,12 @@ django-crispy-forms==2.0
 django-htmx==1.14.0
 django-model-utils==4.3.1
 django-notifications-hq==1.7.0
+django-widget-tweaks==1.4.12
 djangorestframework==3.14.0
 idna==3.4
 jsonfield==3.1.0
 oauthlib==3.2.2
+psycopg2-binary==2.9.5
 pycparser==2.21
 PyJWT==2.6.0
 python3-openid==3.2.0
